--- a/src/components/Day.css
+++ b/src/components/Day.css
@@ -5,3 +5,11 @@
   justify-content: center;
   align-items: center;
 }
+
+.modal {
+  width: 200px;
+  height: 200px;
+  background-color: black;
+  position: fixed;
+  z-index: 50;
+}
