--- a/src/components/Day.css
+++ b/src/components/Day.css
@@ -7,9 +7,48 @@
 }
 
 .modal {
-  width: 200px;
-  height: 200px;
-  background-color: black;
-  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
   z-index: 50;
+  animation: modal-bg-show 0.3s;
+}
+
+.modal > section {
+  width: 300px;
+  height: 400px;
+  background-color: #fff;
+  animation: modal-show 0.3s;
+}
+
+.modal > section > header {
+  padding: 16px;
+  background-color: #f1f1f1;
+  font-weight: 700;
+}
+
+@keyframes modal-show {
+  from {
+    opacity: 0;
+    margin-bottom: 50px;
+  }
+  to {
+    opacity: 1;
+    margin-top: 0;
+  }
+}
+
+@keyframes modal-bg-show {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
